Fix HTML formatting and update contact links

--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 
         <div class="social-icons">
           <a href="#" id="linkedIn"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="#" id="github"><i class="fa-brands fa-github"></i></a>
-          <a href="#" id="twitter"><i class="fa-brands fa-x-twitter"></i></a>
           <a href="https://wa.me/923125755065?text=Hi%20Minhas,%20I%20saw%20your%20portfolio%20and%20would%20like%20to%20discuss%20a%20project." target="_blank" id="wapp"><i class="fa-brands fa-whatsapp"></i></a>
+          <a href="mailto:khanminhas420@gmail.com" target="_blank" id="email"><i class="fa-regular fa-envelope"></i></a>
         </div>
         <a href="#" class="btn">Hire me</a>
       </div>
@@ -178,4 +177,5 @@
 </footer>
   </body>
 </html>
+
 
