--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </p>
 
         <div class="social-icons">
-          <a href="#" id="linkedIn"><i class="fa-brands fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/minhas-khan-29909b350?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank" id="linkedIn"><i class="fa-brands fa-linkedin"></i></a>
           <a href="https://wa.me/923125755065?text=Hi%20Minhas,%20I%20saw%20your%20portfolio%20and%20would%20like%20to%20discuss%20a%20project." target="_blank" id="wapp"><i class="fa-brands fa-whatsapp"></i></a>
           <a href="mailto:khanminhas420@gmail.com" target="_blank" id="email"><i class="fa-regular fa-envelope"></i></a>
         </div>
@@ -177,5 +177,6 @@
 </footer>
   </body>
 </html>
+
 
 
