--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <div class="topic">Have any Project?</div>
       <p>I'm currently learning and building projects as a front-end developer. If you have an opportunity, feedback, or just want to connect, don't hesitate to reach out.</p>
     <div class="button">
-      <a id="cv-cht-btn">Let's Chat</a>
+      <a href="https://wa.me/923125755065?text=Hi%20Minhas,%20I%20saw%20your%20portfolio%20and%20would%20like%20to%20discuss%20a%20project." target="_blank" id="cv-cht-btn">Let's Chat</a>
     </div>
     </div>
   </div>
@@ -177,6 +177,7 @@
 </footer>
   </body>
 </html>
+
 
 
 
